bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: value message
  message = litMessage()
  ^BDR:3: error: not found: value message
  if (message == 'A') { 
      ^BDR:4: error: not found: value avancer
    avancer()
    ^BDR:5: error: not found: value message
  } else if (message == 'B') {
             ^BDR:6: error: not found: value avancer
    avancer()
    ^BDR:7: error: not found: value avancer
    avancer()
    ^BDR:8: error: not found: value message
  } else if (message == 'C') {
             ^BDR:9: error: not found: value avancer
    avancer()
    ^BDR:10: error: not found: value avancer
    avancer()
    ^BDR:11: error: not found: value avancer
    avancer()
    ^BDR:12: error: not found: value message
  } else if (message == 'R') {
             ^BDR:14: error: not found: value avancer
    avancer()
    ^BDR:15: error: not found: value message
  } else if (message == 'L') {
             ^BDR:17: error: not found: value avancer
    avancer()
    ^BDR:18: error: not found: value message
  } else if (message == 'I') {
             ^BDR:21: error: not found: value avancer
    avancer()
    ^BDR:22: error: not found: value message
  } else if (message == 'Z') {
             ^BDR:23: error: not found: value reculer
    reculer()
    ^BDR:24: error: not found: value message
  } else if (message == 'Y') {
             ^BDR:25: error: not found: value reculer
    reculer()
    ^BDR:26: error: not found: value reculer
    reculer()
    ^BDR:27: error: not found: value message
  } else if (message == 'X') {
             ^BDR:28: error: not found: value reculer
    reculer()
    ^BDR:29: error: not found: value reculer
    reculer()
    ^BDR:30: error: not found: value reculer
    reculer()
    ^