bdr.BDR.scala.code
while (estSurMessage()) {
  message = litMessage()
  if (message == 'A') { 
    avancer()
	} else if (message == 'B') {
    avancer()
    avancer()
	} else if (message == 'C') {
    avancer()
    avancer()
    avancer()
	} else if (message == 'R') {
    droite()
    avancer()
	} else if (message == 'L') {
    gauche()
    avancer()
  } else if (message == 'I') {
    droite()
    droite()
    avancer()
	} else if (message == 'Z') {
    reculer()
	} else if (message == 'Y') {
    reculer()
    reculer()
	} else if (message == 'X') {
    reculer()
    reculer()
    reculer()
  }
}